# tauri-plugin-packagemanager

./: Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts
android/src/androidTest/java/: PackageManagerInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: PackageManager.kt  PackageManagerPlugin.kt
android/src/test/java/: PackageManagerUnitTest.kt
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_application_icon.toml  get_application_info.toml  get_installed_applications.toml  get_visible_applications.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
